Unbreak main.py
I'm not sure if it's still useful, but whatever.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <ul>
       {% for slot in slots %}
       <li>
-        {{ slot.start }}: {{slot.user.nickname()}}
+        {{ slot.slot }}: {{slot.owner}}
       </li>
       {% endfor %}
     </ul>
