--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<tbody>
 				{% for hour in hours %}
 					<tr data-hour="{{hour*2}}">
-						<th rowspan="2" class="text-center">{% if hour % 12 == 0 %}12{% else %}{{ hour % 12 }}{% endif %}{% if hour < 12 %}am{% else %}pm{% endif %}</th>
+						<th rowspan="2" class="text-center" id="{% if hour % 12 == 0 %}12{% else %}{{ hour % 12 }}{% endif %}{% if hour < 12 %}am{% else %}pm{% endif %}">{% if hour % 12 == 0 %}12{% else %}{{ hour % 12 }}{% endif %}{% if hour < 12 %}am{% else %}pm{% endif %}</th>
 						{% for d in days %}
 							<td data-day="{{d}}"></td>
 						{% endfor %}
@@ -184,50 +184,69 @@
 			case "add":
 				// make AJAX call to add slot
 				// Add "deny add" change here instead so ajax call does not go through. -Karen
-				$.ajax({
-					url: '/api/v1/add',
-					type: 'POST',
-					data: {slot: slotParam, date: dateParam, room: roomParam},
-					success: function(resp) {
-						var compareDate = Date.compare(Date.today(), fullDateParam);
-						console.log(Date.today()); //debug code  -Karen
-						console.log(fullDateParam); //debug code -Karen
-						console.log(compareDate); //debug code  -Karen
-						if ((resp === "True") && (compareDate === (0 || -1))) {
-							$slotObject.text(userName);
-							updateSlotStyle($slotObject, "display");
-							return true;
-						} else {
-							// display error message
-							alert("Sorry, cannot book this slot!! - Add ajax call");
-							return false;
+		
+				var compareDate = Date.compare(Date.today(), fullDateParam);
+				console.log(Date.today()); //debug code  -Karen
+				console.log(fullDateParam); //debug code -Karen
+				console.log(compareDate); //debug code  -Karen
+				if (compareDate === (0 || -1)) {
+						$.ajax({
+						url: '/api/v1/add',
+						type: 'POST',
+						data: {slot: slotParam, date: dateParam, room: roomParam},
+						success: function(resp) {
+							if (resp === "True") {
+								$slotObject.text(userName);
+								updateSlotStyle($slotObject, "display");
+								return true;
+							} else {
+								// display error message
+								alert("Sorry, cannot book this slot!! - Add ajax call");
+								return false;
 							}
-					},
-					error: function(req, status, err) {
-						return false;
-					}
-				});
+						},
+						error: function(req, status, err) {
+							return false;
+						}
+				
+						});
+				} else {
+					// display error message
+					alert("This date occurs in the past.");
+					return false;
+				}
 				break;
+				
 			case "delete":
 				// make AJAX call to delete slot
-				$.ajax({
-					url: '/api/v1/remove',
-					type: 'POST',
-					data: {slot: slotParam, date: dateParam},
-					success: function(resp) {
-						if (resp === "True") {
-							$slotObject.text("");
-							updateSlotStyle($(this), "display");
-							return true;
-						} else {
-							alert("Error deleting slot");
+				var compareDate = Date.compare(Date.today(), fullDateParam);
+				console.log(Date.today()); //debug code  -Karen
+				console.log(fullDateParam); //debug code -Karen
+				console.log(compareDate); //debug code  -Karen
+				if (compareDate === (0 || -1)) {	
+					$.ajax({
+						url: '/api/v1/remove',
+						type: 'POST',
+						data: {slot: slotParam, date: dateParam},
+						success: function(resp) {
+							if (resp === "True") {
+								$slotObject.text("");
+								updateSlotStyle($(this), "display");
+								return true;
+							} else {
+								alert("Error deleting slot");
+								return false;
+								}
+						},
+						error: function(req, status, err) {
 							return false;
-							}
-					},
-					error: function(req, status, err) {
-						return false;
-					}
-				});
+						}
+					});
+				} else {
+					// display error message
+					alert("This date occurs in the past.");
+					return false;
+				}
 				break;	
 		}
 		return false;
