--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<tbody>
 				{% for hour in hours %}
 					<tr data-hour="{{hour*2}}">
-						<th rowspan="2" class="text-center" id="{% if hour % 12 == 0 %}12{% else %}{{ hour % 12 }}{% endif %}{% if hour < 12 %}am{% else %}pm{% endif %}">{% if hour % 12 == 0 %}12{% else %}{{ hour % 12 }}{% endif %}{% if hour < 12 %}am{% else %}pm{% endif %}</th>
+						<th rowspan="2" class="text-center">{% if hour % 12 == 0 %}12{% else %}{{ hour % 12 }}{% endif %}{% if hour < 12 %}am{% else %}pm{% endif %}</th>
 						{% for d in days %}
 							<td data-day="{{d}}"></td>
 						{% endfor %}
